<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Numbers Flow</string>
    <string name="hello_world">Hello world!</string>
    <string name="play">Play</string>
    <string name="records">Scores</string>
    <string name="quit">Quit</string>
    <string name="reset">Reset</string>
    <string name="replay">Replay</string>
    <string name="congrats">Congratulations</string>
    <string name="youreached">You reached</string>
    <string name="topScores">Top scores</string>
    <string name="classic">Classic</string>
    <string name="disco">Disco</string>
    <string name="howtoplay">How to play</string>
    <string name="slots">Slots</string>
    <string name="scoresTable">Scores</string>
</resources>
