<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15" >
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.7" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="classicModeClick"
                android:text="@string/classic" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="rainbowModeClick"
                android:text="@string/disco" />
            
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="slotsModeClick"
                android:text="@string/slots" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="howtoplayModeClick"
                android:text="@string/howtoplay" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="quitGameClick"
                android:text="@string/quit" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15" >
    </RelativeLayout>

</LinearLayout>